# financial_review_ai

./: README.md  crew.yaml  pyproject.toml  requirements.txt
financial_review_ai/: crew.py  main.py
financial_review_ai/config/: settings.py
financial_review_ai/data/: BS.xls  MSC.xls  PL.xls
financial_review_ai/templates/: report_template.html
financial_review_ai/tools/: crew_agent_analyzer.py  crew_agent_loader.py  crew_agent_reporter.py
financial_review_ai/utils/: analyzer.py  data_loader.py  reporter.py
